--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-three": "^0.9.7",
+    "styled-components": "^5.3.9",
     "three": "^0.150.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
