changed Near Ukraine link in json

--- a/src/assets/projectspopup.json
+++ b/src/assets/projectspopup.json
@@ -235,7 +235,7 @@
     "logo": "logos/Not stonks.png"
   },
   "Near Ukraine": {
-    "link": "https://t.me/nearprotocolua/",
+    "link": "https://linktr.ee/nearuaguild",
     "description": "",
     "logo": "logos/Near UA.png",
     "owner": "tile owned by: ",
