--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.58.1",
     "@react-three/fiber": "^8.12.0",
+    "@types/node": "^18.15.11",
     "events": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
