--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: yarn install and build
         run: |
           yarn
-          BASE_URL=https://monopoly-game.ostolex.com yarn build
+          BASE_URL=https://monopoly-game.ostolex.com/ yarn build
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
         env:
