--- a/src/assets/projectspopup.json
+++ b/src/assets/projectspopup.json
@@ -1,6 +1,6 @@
 {
   "Go": {
-    "description": "Collect $200 when they pass or land on this space",
+    "description": "Collect $200 when pass or land on this space",
     "logo": "logos/Go.png"
   },
   "Paras": {
