Fixing after Yurii

--- a/src/assets/projectspopup.json
+++ b/src/assets/projectspopup.json
@@ -71,7 +71,7 @@
     "description": "Say hi to Sam!",
     "logo": "logos/Jailtime.png"
   },
-  "Ref.finance": {
+  "Ref Finance": {
     "link": "https://ref.finance/",
     "description": "Community-led, multi-purpose DeFi platform built on the NEAR Protocol",
     "logo": "logos/RefFinance.png",
