Bunch of small fixes

--- a/src/assets/projectspopup.json
+++ b/src/assets/projectspopup.json
@@ -168,8 +168,8 @@
       "Double DAO member"
     ],
     "prices": [
-      "Dice Roll * 4",
-      "Dice Roll * 10"
+      "4x Dice Roll",
+      "10x Dice Roll"
     ]
   },
   "Rainbow Bridge": {
@@ -337,8 +337,8 @@
       "Double DAO member"
     ],
     "prices": [
-      "Dice Roll * 4",
-      "Dice Roll * 10"
+      "4x Dice Roll",
+      "10x Dice Roll"
     ]
   },
   "Polosukhin University": {
